--- a/myself/src/components/Pages/Activities/Activities.module.scss
+++ b/myself/src/components/Pages/Activities/Activities.module.scss
@@ -1,9 +1,34 @@
 .wrapper{
-    background-color: white;
-
+    display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .diagram {
-    margin: 20px;
-    padding: 12px;
+    align-content: center;
+    max-width: calc(50% - 10px);
+    width: 100%;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: row;
+    background-color: #fff;
+    min-width: 600px;
+    text-decoration: none;  
+    padding: auto;
+    justify-content: center;
+}
+
+.history {
+    padding: 80px 0;
+    display: inline-block;
+    height: 350px;
+    justify-content: center;
+    padding: auto;
+    background-color: white;
+    width: calc(50% - 20px);
+    border-radius: 12px;
+    @media screen {
+        
+    }
 }
