--- a/myself/src/components/header/Header.module.scss
+++ b/myself/src/components/header/Header.module.scss
@@ -6,14 +6,15 @@
 .header{
     border-radius: 9px;
     padding: 10px 40px;
-    max-width: 1100px;
-    margin: 0 auto;
+    max-width: 1920px;
+    margin: 0 0 10px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
 
     .menu{
+        font-size: 130%;
         display: flex;
         gap: 20px;
         align-items: center;
