--- a/myself/src/components/Pages/Activities/Activities.module.scss
+++ b/myself/src/components/Pages/Activities/Activities.module.scss
@@ -20,9 +20,9 @@
 }
 
 .history {
-    padding: 80px 0;
+    padding: auto;
     display: inline-block;
-    height: 350px;
+    height: 450px;
     justify-content: center;
     padding: auto;
     background-color: white;
