--- a/myself/src/components/Diagrams/Diagrams.module.scss
+++ b/myself/src/components/Diagrams/Diagrams.module.scss
@@ -5,4 +5,21 @@
     align-content: center;
     padding: 10px;
     height: 500px;
+    font-size: 90%;
+    
+    .recharts-wrapper{
+        height: 300px;
+            width: 300px;
+    }
+
+    .recharts-surface{
+        @media screen and(max-width: 550px) {
+            height: 300px;
+            width: 300px;
+        }
+    }
+    @media screen and(max-width: 550px) {
+        height: 300px;
+        width: 300px;
+    }
 }
