--- a/myself/src/components/History/History.module.scss
+++ b/myself/src/components/History/History.module.scss
@@ -1,7 +1,53 @@
-.historyWrapper{
+.historyWrapper {
     padding: 10px;
     max-width: 400px;
-    justify-content: center;
     text-align: center;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    @media screen and (max-width: 1240px) {
+       justify-content: space-between;
+       gap: 20px;
+       width: 500px;
+       flex-direction: row;
+    }
+}
+
+.diagram{
+    @media screen and (max-width: 1240px) {
+        justify-content: space-between;
+        gap: 20px;
+        width: 500px;
+        flex-direction: row;
+     }
+}
+
+
+.buttonWrap {
+    display: flex;
+    margin: 10px 0;
+    width: 800px;
+    justify-content:start ;
+    max-width: 50%;
+    gap: 5px;
+
+    button {
+        appearance: none;
+        border: 0;
+        border-radius: 5px;
+        background: #4676D7;
+        color: #fff;
+        font-size: 100%;
+
+        padding: 6px;
+    }
+    @media screen and (max-width: 1240px) {
+        flex-direction: column;
+        justify-content: space-around;
+        font-size: auto;
+        width: 30%;
+        font-size: 110%;
+     }
 }
