--- a/myself/src/components/Pages/Activities/Activities.module.scss
+++ b/myself/src/components/Pages/Activities/Activities.module.scss
@@ -1,34 +1,49 @@
-.wrapper{
+.wrapper {
     display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    @media  screen and (max-width : 1240px) {
+        gap: 10px;
+        justify-content: center;
+        padding: 0;
+    }
 }
 
 .diagram {
     align-content: center;
-    max-width: calc(50% - 10px);
+    max-width: calc(50% - 9px);
     width: 100%;
     border-radius: 12px;
     display: flex;
     flex-direction: row;
     background-color: #fff;
-    min-width: 600px;
-    text-decoration: none;  
+    text-decoration: none;
     padding: auto;
     justify-content: center;
+
+    .recharts-wrapper{
+        width:300px;
+        height: 300px;
+    }
+
+    @media screen and (max-width: 1240px) {
+        max-width: 1200px;
+        margin: auto;
+    }
 }
 
 .history {
-    padding: auto;
     display: inline-block;
-    height: 450px;
+    height: auto;
     justify-content: center;
-    padding: auto;
     background-color: white;
-    width: calc(50% - 20px);
+    width: calc(50% - 15px);
     border-radius: 12px;
-    @media screen {
-        
+
+    @media screen and (max-width: 1240px) {
+        padding: 15px;
+        width: 1200px;
+        margin: auto;
     }
 }
