--- a/myself/src/components/userCard/userCard.module.scss
+++ b/myself/src/components/userCard/userCard.module.scss
@@ -1,28 +1,102 @@
-.wrapper{
-    width: 100%;
-    border-radius: 12px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    min-width: 430px;
-    text-decoration: none;
-    padding: 4px;
+.textWrap {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
+   width: 100%;
+
+   @media screen and (max-width: 1100px) {
+      flex-direction: column;
+      justify-content: center;
+      font-size: 90%;
+   }
 }
 
-.imgWrap{
-    width: 220px;
-    height: 220px;
-    display: block;
-    position: relative;
-    object-fit: cover;
-    overflow: hidden;
+.nameWrap {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   font-size: 250%;
+   padding: auto;
+   text-align: center;
+   margin: auto;
+
+   @media screen and (max-width: 1100px) {
+      padding: auto;
+      font-size: 200%;
+   }
 }
-.imgWrap img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+.desciptionWrap {
+   border :4px solid black;
+   border-style: none dashed none dashed ;
+   margin: auto;
+   text-align: center;
+   padding: 20px 20px;
+   font-size: 200%;
+   justify-content: center;
+   display: flex;
+   position: flex;
+   margin: 0 0 10px 0;
+
+   @media screen and (max-width: 1100px) {
+      text-align: center;
+      font-size: 150%;
+      padding: 20px auto;
+   }
+
+   @media screen and (max-width: 860px) {
+      border-style:  dashed none dashed none;
+   }
+}
+
+.imgWrap {
+   align-items: center;
+   border-radius: 55px;
+   padding: auto;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   margin: 25px 15px;
+
+}
+
+.userCard {
+   width: 100%;
+   padding: 20px;
+   margin: 0 40px 0 0;
+   border-radius: 9px;
+   overflow: hidden;
+   display: flex;
+   flex-direction: row;
+   background-color: white;
+   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+   text-decoration: none;
+   padding: 4px;
+   margin: 5px auto;
+   align-items: center;
+   justify-content: space-between;
+
+   @media screen and (max-width: 860px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: auto;
+   }
+
+   img {
+      align-content: left;
+      border-radius: 15%;
+      height: 300px;
+      object-fit: cover;
+
+      @media screen and (max-width: 860px) {
+         border-radius: 25%;
+         width: 400px;
+         height: auto;
+      }
+   }
+
 }
 
 
