--- a/myself/src/components/Pages/TestCard/RadioForm/RadioForm.module.scss
+++ b/myself/src/components/Pages/TestCard/RadioForm/RadioForm.module.scss
@@ -1,15 +1,20 @@
-.container {
-  padding: 1rem;
-  max-width: 100%;
+.form {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  gap: 1rem;
 }
 
 .button {
-  padding: 0.9rem;
+  display: inline;
 
-  width: 20rem;
+  padding: 0.9rem;
 
   font-size: 0.9rem;
 
@@ -18,8 +23,11 @@
 
   border: none;
   border-radius: 0.5rem;
-
   outline: none;
 
   cursor: pointer;
+}
+
+.delete_button {
+  background-color: #e71818;
 }
