--- a/myself/src/components/Pages/RegisterPage/Registre.module.scss
+++ b/myself/src/components/Pages/RegisterPage/Registre.module.scss
@@ -56,6 +56,10 @@ button {
     padding: 10px;
     background-color: rgb(65, 131, 255);
     font-weight: 300;
+    text-decoration: none;
+}
+a {
+ text-decoration: none;
 }
 
 button:hover{
